--- a/covid19/sympton/symptom.css
+++ b/covid19/sympton/symptom.css
@@ -57,7 +57,7 @@
 
 .box-infectious{
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 50px;
     margin-bottom: 10%;
     width: 700px;
     height: 400px;
@@ -69,5 +69,6 @@
 #symptom_image{
     margin-left: 12%;
     margin-right: 12%;
+    margin-top: 10%;
     
 }
