--- a/covid19/sympton/symptom.css
+++ b/covid19/sympton/symptom.css
@@ -1,10 +1,22 @@
 .bg{
-    width: auto;
-    height: 750px;
+  
+    height: 100vh;
     background-color: #151515;
-    background-attachment: fixed;
+    position: relative;
+    background-image: url(Covidbg.png);
+    background-size: cover;
+    background-position: 0 0;
+    background-repeat: repeat-x;
+    animation: animate 15s linear infinite;
 }
-
+@keyframes animate {
+    from {
+        background-position: 0 0 ;
+    }
+    to{
+        background-position: 100% 0;
+    }
+}
 .font{
     font-family: 'Oswald', sans-serif;
 }
@@ -39,6 +51,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    
 }
 .box-clumn{
     height: 600px;
@@ -71,4 +84,8 @@
     margin-right: 12%;
     margin-top: 10%;
     
+}
+.img{
+    width: 60px;
+    height: 60px;
 }
